--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+  "homepage": "https://Nimbalkar25.github.io/my-react-app",
   "name": "router-study-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
